#----------------------------------------------------------------
#
#  configure.ac
#
#  Autoconf source file for the sppdgTcllib library
#
#  This file, along with aclocal, autoconf, Makefile.am,
#  and automake can produce a highly functional configuration
#  script and Makefile.
#
#  Bob Techentin
#  January 22, 2004
#  Copyright 2004 Mayo Foundation.  All Rights Reserved
#
#  $Id: configure.ac,v 1.2 2004/05/10 18:46:27 schrauf Exp $
#
#----------------------------------------------------------------


#----------------------------------------------------------------
#  Declare the package name and version.
#  All the bouquets and brickbats go to Bob. :-)
#----------------------------------------------------------------
AC_INIT(sppdgTcllib, 1.0, techentin.robert@mayo.edu)

#----------------------------------------------------------------
#  Give autoconf a point of reference, and tell it that
#  we're going to use automake later.
#----------------------------------------------------------------
AC_CONFIG_SRCDIR
AM_INIT_AUTOMAKE(sppdgTcllib, 1.0)


#---------------------------------------------------------------
#  Install these subdirectories
#---------------------------------------------------------------
AC_CONFIG_SUBDIRS(console getFilePreview sgraph addressDialog)

  
AC_CONFIG_FILES([Makefile])
AC_OUTPUT






