#----------------------------------------------------------------
#
#  configure.ac
#
#  Autoconf source file for Boundary Element MMTL (bem).
#  This file, along with aclocal, autoconf, Makefile.am,
#  and automake can produce a highly functional configuration
#  script and Makefile.
#
#  Sharon Zahn, Bob Techentin
#  October 3, 2002
#
#  Copyright 2002-2004 Mayo Foundation.  All Rights Reserved.
#  $Id: configure.ac,v 1.3 2004/02/05 22:24:23 techenti Exp $
#
#----------------------------------------------------------------


#----------------------------------------------------------------
#  Declare the package name and version.
#  All the bouquets and brickbats go to Sharon. :-)
#----------------------------------------------------------------
AC_INIT(UNITS, 1.0, zahn.sharon@mayo.edu)

#----------------------------------------------------------------
#  Give autoconf a point of reference, and tell it that
#  we're going to use automake later.
#----------------------------------------------------------------
AC_CONFIG_SRCDIR
AM_INIT_AUTOMAKE


#----------------------------------------------------------------
#  Don't bother checking for host type, libraries, or 
#  header file variations, as we're just dealing
#  with highly portable scripts at this level.
#----------------------------------------------------------------

AC_CONFIG_FILES([Makefile])
AC_OUTPUT






