#----------------------------------------------------------------
#
#  Makefile.am
#
#  This file, along with aclocal, configure.ac autoconf,
#  and automake can produce a highly functional configuration
#  script and Makefile.
#
#  Copyright 2003 (C) Mayo Foundation.  All Rights Reserved
#
#----------------------------------------------------------------
AUTOMAKE_OPTIONS = foreign subdir-objects

#---------------------------------------------------------------
# tcl/tk scripts that may need to be installed.
#---------------------------------------------------------------
pkglib_SCRIPTS = \
	addressDialog.tcl \
	pkgIndex.tcl

#---------------------------------------------------------------
#  Define an installation directory that includes
#  the version number (from AC_INIT) like "addressDialog1.0"
#---------------------------------------------------------------
pkglibdir = $(libdir)/$(PACKAGE)$(PACKAGE_VERSION)


