#----------------------------------------------------------------
#
#  configure.ac
#
#  Autoconf source file for the addressDialog.
#
#  This file, along with aclocal, autoconf, Makefile.am,
#  and automake can produce a highly functional configuration
#  script and Makefile.
#
#----------------------------------------------------------------


#----------------------------------------------------------------
#  Declare the package name and version.
#----------------------------------------------------------------
AC_INIT(ADDRESSDIALOG, 1.0, schrauf@mayo.edu)

#----------------------------------------------------------------
#  Give autoconf a point of reference, and tell it that
#  we're going to use automake later.
#----------------------------------------------------------------
AC_CONFIG_SRCDIR
AM_INIT_AUTOMAKE(addressDialog, 1.0)


#----------------------------------------------------------------
#  Don't bother checking for host type, libraries, or 
#  header file variations, as we're just dealing
#  with highly portable scripts at this level.
#----------------------------------------------------------------

AC_CONFIG_FILES([Makefile])
AC_OUTPUT






